cmake_minimum_required(VERSION 4.1)
project(algoritmos2 C)

set(CMAKE_C_STANDARD 99)

add_executable(algoritmos2 main.c
        atividadeMoodle/unidadetres/ex01.c
        atividadeMoodle/unidadetres/ex02.c
        atividadeMoodle/unidadetres/ex03.c
        atividadeMoodle/unidadetres/ex04.c
        atividadeMoodle/unidadetres/ex05.c
        atividadeMoodle/unidadetres/ex06.c
        atividadeMoodle/unidadetres/ex07.c
        atividadeMoodle/unidadetres/ex08.c
        atividadeMoodle/unidadetres/ex10.c
        atividadeMoodle/unidadetres/ex09.c
        atividadeMoodle/unidadecinco/ex01.c
        atividadeMoodle/unidadequatro/ex01.c
        atividadeMoodle/unidadequatro/ex02.c
        atividadeMoodle/unidadequatro/ex03.c
        atividadeMoodle/unidadequatro/ex04.c
        atividadeMoodle/unidadequatro/ex05.c
        atividadeMoodle/unidadequatro/ex06.c
        atividadeMoodle/unidadequatro/ex07.c
        atividadeMoodle/unidadequatro/ex08.c
        atividadeMoodle/unidadequatro/ex09.c
        atividadeMoodle/unidadequatro/ex10.c
        atividadeMoodle/unidadecinco/ex02.c
        atividadeMoodle/unidadecinco/ex03.c
        atividadeMoodle/unidadecinco/ex04.c
        atividadeMoodle/unidadecinco/ex05.c
        atividadeMoodle/unidadecinco/ex06.c
        atividadeMoodle/unidadecinco/ex07.c
        atividadeMoodle/unidadecinco/ex08.c
        atividadeMoodle/unidadecinco/ex09.c
        atividadeMoodle/unidadecinco/ex10.c)

